---------------------------------------------------------------------------------------------------
Version: 0.10.1
Date: 24. 01. 2020
  Bugfixes:
    - Updated icon size logic to better support newer variations of icon specification in 0.18
---------------------------------------------------------------------------------------------------
Version: 0.10.0
Date: 22. 01. 2020
  Added:
    - Support for Factorio 0.18
    - Signal color support for Realistic Ores mod
    - Basic handling of icon conflicts with Maintenance Madness mod
  Removed:
    - Support for Factorio 0.17 (use Dectorio version 0.9.16 instead)
  Locales:
    - Added Hungarian translation (thanks to mmnetworkteam)
    - Updated Spanish translation (thanks to notallme)
---------------------------------------------------------------------------------------------------
Version: 0.9.16
Date: 01. 10. 2019
  Added:
    - High resolution icons for crafting tab and most items
    - Support for high resolution icons in signs
  Changed:
    - Split Landfill and Earthworks into seperate technologies so that they have better progression in the Industrial Revolution tech tree overhaul
  Removed:
    - Landfill no longer appears as dirt and instead uses the new vanilla Landfill textures
  Bugfixes:
    - Fixes tile layering issues with Painted concrete when playing with the Industrial Revolution mod
  Locales:
    - Fixes an issue with the Polish translation that was preventing the game from launching
    - Updated Korean translation (thanks to GimoXagros)
---------------------------------------------------------------------------------------------------
Version: 0.9.15
Date: 10. 09. 2019
  Added:
    - Signal color support for Angel's Refining and Angel's Smelting modded items
    - Support for built in mod incompatibility listing
  Bugfixes:
    - Fixed an oversight when determining the minable result of trees and rocks that caused an incompatibility with Industrial Revolution mod
  Changed: