@@ -97,8 +97,8 @@ DECT.ENABLED = {
 	["walls"] = settings.startup["dectorio-walls"].value,
 	["landscaping"] = settings.startup["dectorio-landscaping"].value,
 	["waterfill"] = settings.startup["dectorio-waterfill"].value,
-	["wood-floor"] = settings.startup["dectorio-flooring"].value,
-	["concrete"] = settings.startup["dectorio-flooring"].value,
+	["wood-floor"] = settings.startup["dectorio-wood"].value,
+	["concrete"] = settings.startup["dectorio-concrete"].value,
 	["gravel"] = settings.startup["dectorio-gravel"].value,
 	["painted-concrete"] = settings.startup["dectorio-painted-concrete"].value,
 	["signs"] = settings.startup["dectorio-signs"].value,
