@@ -9,9 +9,10 @@ dectorio-signals=Enable Signals
 dectorio-walls=Enable Walls and Gates
 dectorio-landscaping=Enable Landscaping
 dectorio-waterfill=Enable Waterfill
-dectorio-flooring=Enable Floorings
-dectorio-gravel=Enable Gravel
-dectorio-painted-concrete=Enable Painted Concrete
+dectorio-wood=Enable Wooden Tiles
+dectorio-gravel=Enable Gravel Tiles
+dectorio-concrete=Enable Concrete Tiles
+dectorio-painted-concrete=Enable Painted Concrete Tiles
 dectorio-signs=Enable Signs
 dectorio-decoratives=Enable Decoratives
 dectorio-item-group=Separate Crafting Tab
@@ -28,8 +29,9 @@ dectorio-signals=Enables additional signals for use in lamps or the circuit netw
 dectorio-walls=Enables additional wall and gate types
 dectorio-landscaping=Enables the ability to craft sand, dirt, grass and desert tiles
 dectorio-waterfill=Enables the ability to craft water for making or expanding lakes
-dectorio-flooring=Enables the ability to craft flooring types including wooden floorboards
+dectorio-wood=Enables the ability to craft wooden flooring types
 dectorio-gravel=Enables the ability for raw ore materials to be placed on the ground as gravel
+dectorio-concrete=Enables the ability to craft concrete flooring types, including grid concrete
 dectorio-painted-concrete=Enables painted concrete styles that replace the base Hazard concrete
 dectorio-signs=Enables the ability to place signs
 dectorio-decoratives=Enables the ability to craft decorative items for your factory
