@@ -1,0 +1,8 @@
+{
+	"mod-setting": [
+		[
+			"dectorio-flooring",
+			"dectorio-wood"
+		]
+	]
+}
